chore(Image): v2.5.5 Update - FIRST  RELEASE VERSION
图片绘制方案类更新
[+] 新增DrawMotd方法，专门用来绘制Minecraft服务器信息
[-] 精简motd查询和服务器上下线上报机制，统一调用DrawMotd
[+] manoyinxi.png正式加入resources目录中备用
[+] manosaba.png正式加入resources目录中备用
[+] mojangstatus.png正式加入resources目录中备用
[+] github_background.png正式加入resources目录中备用
[+] 规范所有文件名到枚举 ConfigFile
[+] 所有结构重构正式完成，将快照版本更名为正式版本